fixed html overflow on mobile devices

--- a/css/styles.css
+++ b/css/styles.css
@@ -33,6 +33,8 @@ body {
     #cfdef3,
     #e0eafc
   ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
+  overflow-x: hidden;
 }
 
 a {
